# game-engine

./: .gitignore  CMakeLists.txt  Makefile  README.md
assets/Sounds/: attr.txt
libs/SDL2_packed/: CMakeLists.txt
src/: Engine.cpp  Engine.h  GameState.cpp  GameState.h  Main.cpp  Main.h  engine.odin  main.odin
src/Animation/: animation.odin
src/Animation2D/: Animation2D.cpp  Animation2D.hpp  Animation2D.odin
src/AnimationReference/: animation_reference.odin
src/Audio/: Audio.cpp  Audio.hpp  Audio_test.cpp  Audio_test.hpp  audio.odin  audio_test.odin
src/Engine/: engine.odin
src/Input/: Input.cpp  Input.hpp  Input_test.cpp  Input_test.hpp  README.md  input.odin  input_test.odin
src/Rendering/: Rendering.cpp  Rendering.hpp  Rendering_test.cpp  Rendering_test.hpp  rendering.odin  rendering_test.odin
src/animation_reference/: animation_reference.odin
src/tests/: tests.odin
